--- a/app/Menu/menu.html
+++ b/app/Menu/menu.html
@@ -1,9 +1,9 @@
 <div class="menu-items">
-    <div ng-show="isLogged && !showTable" class="menu-item-container" style="background-color: #CC3F3F">
+    <div ng-show="isLogged && !showTable" class="menu-item-container menu-title" style="background-color: #CC3F3F">
         <span style="font-size: 25px">לא קיים שולחן לסועד</span>
         <a href="#/selectTable"  class="btn btn-link">בחר מספר שולחן</a>
     </div>
-    <div ng-show="isLogged && showTable" class="menu-item-container" style="background-color: #CC3F3F">
+    <div ng-show="isLogged && showTable" class="menu-item-container menu-title" style="background-color: #CC3F3F">
         <span style="font-size: 25px">שולחן מס' </span>
         <span style="font-size: 30px">{{tableNo}}</span>
     </div>
