--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,8 @@
 
  <!----><link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-
+    <link href="css/bootstrap-extension.css" rel="stylesheet" />
+    
     <script src="js/jquery-1.7.1.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/angular.js"></script>
