--- a/app/header.html
+++ b/app/header.html
@@ -10,6 +10,8 @@
 
         </div>
         <div id="navbar">
+              
+        <span class="user-details">{{session.user.firstName}} {{session.user.lastName}}</span>
               <nav class="navbar navbar-inverse navbar-fixed-top" id="navbarTop" >
                   <div class="container-fluid">
                   <div class="logo">
