--- a/app/index.html
+++ b/app/index.html
@@ -29,10 +29,8 @@
 </head>
 <body ng-app="myApp">
     <div ng-controller="HomeController">
-        
-
         <header items="items"></header>
-        <span class="user-details">{{session.user.firstName}} {{session.user.lastName}}</span>
+        <span class="user-details">Bon Appetit {{session.user.firstName}} {{session.user.lastName}}</span>
         <div class="container" ng-view></div>
         <nav class="navbar navbar-inverse navbar-fixed-bottom">
             <span> כל הזכויות שמורות Click-A-Table </span>
