--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 <body ng-app="myApp">
     <div ng-controller="HomeController">
         <header items="items"></header>
-         <div> <span class="user-details">Bon Appetit {{session.user.firstName}} {{session.user.lastName}}</span></div>
+         <div> <span class="user-details">בתאבון {{session.user.firstName}} {{session.user.lastName}}</span></div>
         <div class="container" ng-view></div>
         <nav class="navbar navbar-inverse navbar-fixed-bottom">
             <span> כל הזכויות שמורות Click-A-Table </span>
