Login as Manager
plus small bug fixes

--- a/app/CourseDetails/courseDetails.html
+++ b/app/CourseDetails/courseDetails.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
         <label style="color:#fe972d;">כמות:</label>
-        <input ng-model="amount" type="number" name="amount"/>
+        <input ng-model="amount" type="number" name="amount" min="1" max="10"/>
     </div>
 </div>
 
