--- a/app/MessagesManager/manager.html
+++ b/app/MessagesManager/manager.html
@@ -1,28 +1,36 @@
-
-<div ng-repeat="message in messages track by $index">
-    <br/>
-    <div class="menu-item-container">
-        <div class="course-item-desc">
-            {{message.tableNo}}
+<div class="manager-body">
+    <div class="manager-calls">
+    <div class="user-details" style="color:#6EFF00;">קריאות</div>
+    <div ng-repeat="message in messages track by $index">
+        <br/>
+        <div class="order-item" style="border: 3px solid #6EFF00;">
+            <div>שולחן: {{message.tableNo}}</div>
+            <div style="font-style: italic; font-size: 16px;">-ממתין ל</div>
+            <div style="font-size: 25px;">{{message.callType == 'Waiter' ? 'מלצר' : 'חשבון'}}</div>
+            <button ng-click="closeMessage(messages, $index, message.tableNo, message.callType)" class="btn">סגור
+                קריאה
+            </button>
         </div>
-        <div class="course-item-desc">
-            {{message.callType}}
-        </div>
+    </div>
+    </div>
 
-        <button ng-click="closeMessage(messages, $index, message.tableNo, message.callType)" class="btn">סגור קריאה</button>
+    <div class="manager-orders">
+    <div class="user-details" style="color:#D00475;">הזמנות</div>
+    <div ng-repeat="order in orders track by $index">
+        <br/>
+        <div class="order-item" style="border: 3px solid #D00475;">
+            <div>
+                <div>{{order.label}}</div>
+                <div>כמות: {{order.amount}}</div>
+                <div>שולחן: {{order.tableNo}}</div>
+            </div>
+            <div >
+            <button ng-click="closeOrderItem(orders, $index, order.tableNo, order.courseId, order.orderId)" class="btn">
+                סגור הזמנה
+            </button>
+            </div>
+        </div>
+    </div>
     </div>
 </div>
-
-
-<div ng-repeat="order in orders track by $index">
-    <br/>
-    <div class="order-item">
-        <div>{{order.label}}</div>
-        <div>כמות: {{order.amount}}</div>
-        <div>שולחן: {{order.tableNo}}</div>
-        <button ng-click="closeOrderItem(orders, $index, order.tableNo, order.courseId, order.orderId)" class="btn">פריט נשלח</button>
-
-    </div>
-</div>
-
 
