--- a/app/HomePage/homePage.html
+++ b/app/HomePage/homePage.html
@@ -13,8 +13,7 @@
             <th> <img src="css/img/Diner.png" id="DinerImg" /></th>
         </tr>
        <h4>מזמינים שולחן למסעדה בקליק</h4>
-            <h5>שירות להתארחות וקבלת שירות במסעדה במהירות ויעילות</h5>
-
+    <h5>התארחות וקבלת שירות במסעדה במהירות ויעילות</h5>
         </thead>
         </table>
 </div>
