--- a/app/HomePage/homePage.html
+++ b/app/HomePage/homePage.html
@@ -17,5 +17,10 @@
         </thead>
         </table>
 </div>
+<div><img src="css/img/TodayFood/3.jpg" id="DinerImg"><img src="css/img/TodayFood/2.jpg" id="DinerImg"><img src="css/img/TodayFood/1.jpg" id="DinerImg"><img src="css/img/TodayFood/4.jpg" id="DinerImg"><img src="css/img/TodayFood/5.jpg" id="DinerImg"></div>
+<div><img src="css/img/Primary/2.jpg" id="DinerImg"><img id="DinerImg" img="" primary="" src="css/img/Primary/3.jpg"><img src="css/img/Primary/1.jpg" id="DinerImg"><img src="css/img/Primary/4.jpg" id="DinerImg"></div>
+<div><img src="css/img/Primary/5.jpg" id="DinerImg"><img src="css/img/TodayFood/3.jpg" id="DinerImg"><img src="css/img/Primary/6.jpg" id="DinerImg"></div>
+<div><img src="css/img/Salads/1.jpg" id="DinerImg"><img src="css/img/Salads/2.jpg" id="DinerImg"><img src="css/img/Salads/4.jpg" id="DinerImg"><img src="css/img/Salads/1.jpg" id="DinerImg"><img src="css/img/Salads/3.jpg" id="DinerImg"></div>
+<nav class="navbar navbar-inverse navbar-fixed-bottom">
 </body>
 </html>
