--- a/app/CourseDetails/courseDetails.html
+++ b/app/CourseDetails/courseDetails.html
@@ -1,6 +1,6 @@
 <div class="course-details  menu-item-container">
     <div class="course-item-img">
-        <img src="css/img/{{course.image}}" />
+        <img class="course-details-img" src="css/img/{{course.image}}" />
     </div>
     <div class="course-item-desc" style="float: none;">
         <span> {{course.label}}</span>
