--- a/app/CourseDetails/courseDetails.html
+++ b/app/CourseDetails/courseDetails.html
@@ -8,7 +8,7 @@
         <span>עסקית: {{course.businessPrice}}</span>
     </div>
     <div class="row">
-        <label style="color:#fe972d;">כמות:</label>
+        <label class="count">כמות:</label>
         <input ng-model="amount" type="number" name="amount" min="1" max="10"/>
     </div>
 </div>
