--- a/app/MessagesManager/manager.html
+++ b/app/MessagesManager/manager.html
@@ -15,10 +15,10 @@
     </div>
 
     <div class="manager-orders">
-    <div class="user-details" style="color:#D00475;">הזמנות</div>
+    <div class="user-details" style="color:#FF44AC;">הזמנות</div>
     <div ng-repeat="order in orders track by $index">
         <br/>
-        <div class="order-item" style="border: 3px solid #D00475;">
+        <div class="order-item" style="border: 3px solid #FF44AC;">
             <div>
                 <div>{{order.label}}</div>
                 <div>כמות: {{order.amount}}</div>
